@@ -25,7 +25,7 @@
                 [% IF c.check_user_roles('authorized_for_configuration_information') %]
                 <br><a href='config.cgi?type=services&amp;jump2=[% service.host_name | uri %]&amp;jump3=[% service.description | uri %]'>View Configuration For This Service</a>
                 [% END %]
-                <br><a href='status.cgi?s0_op=%3D&amp;s0_type=service&amp;s0_value=[% service.description | uri %]'>View All '[% service.description %]' Services</a> (<a href='status.cgi?s0_op=%3D&amp;s0_type=service&amp;s0_value=[% service.description | uri %]&amp;style=perfmap'>As Performance Map</a>)
+                <br><a href='status.cgi?s0_op=%3D&amp;s0_type=service&amp;s0_value=[% service.description | uri %]'>View All '[% IF service.description.length > 7; service.description.substr(0, 7) %]...[% ELSE; service.description; END %]' Services</a> (<a href='status.cgi?s0_op=%3D&amp;s0_type=service&amp;s0_value=[% service.description | uri %]&amp;style=perfmap'>As Performance Map</a>)
                 <br>
               </td>
             </tr>
@@ -53,6 +53,12 @@
               <input type="submit" name="go" value="go">
             </form>
           </div>
+          [% END %]
+          [% IF service.depends_exec.size > 0 %]
+          <div class='data'>Parents:</div>
+          <div class='dataTitle'>
+            [% FOREACH parent IN service.depends_exec.sort %][% IF !loop.first() %], [% END %]<a href='extinfo.cgi?type=2&host=[% parent.0 | uri %]&service=[% parent.1 | uri %]'>[% IF parent.0 != service.host_name %][% parent.0 %] - [% END %][% parent.1 %]</a>[% END %]
+          </div><br>
           [% END %]
           [% IF service.groups.size > 0 %]
           <div class='data'> Member of </div>
@@ -244,6 +250,9 @@
                               [% IF service.next_check %][% date_format(c, service.next_check) %][% ELSE %]N/A[% END %]
                               [% IF service.check_type == 0; d = duration(service.check_interval * pi_detail.$peer_key.interval_length, 5) %]<span class="check_interval" title="this service will be checked every [% d %]."> (&infin;[% d %])</span>[% END %]
                               [% IF service.is_executing > 0 %]<img src="[% url_prefix %]themes/[% theme %]/images/waiting.gif" alt="This service is currently executing its servicecheck" title="This service is currently executing its servicecheck" border="0" height="20" width="20">[% END %]
+                              [% IF service.depends_exec.size > 0 %]
+                              (dependency: [% FOREACH parent IN service.depends_exec %][% IF !loop.first() %], [% END %]<a href='extinfo.cgi?type=2&host=[% parent.0 | uri %]&service=[% parent.1 | uri %]'>[% IF parent.0 != service.host_name %][% parent.0 %] - [% END %][% parent.1 %]</a>[% END %])
+                              [% END %]
                             </td>
                           </tr>
                           <tr>
@@ -264,6 +273,9 @@
                                 [% IF first_remaining >= 0 %]
                                   &nbsp;<span title="This service will send out notifications in [% first_remaining %] minutes">~[% first_remaining %]min</span>
                                 [% END %]
+                              [% END %]
+                              [% IF service.depends_notify.size > 0 %]
+                              (dependency: [% FOREACH parent IN service.depends_notify %][% IF !loop.first() %], [% END %]<a href='extinfo.cgi?type=2&host=[% parent.0 | uri %]&service=[% parent.1 | uri %]'>[% IF parent.0 != service.host_name %][% parent.0 %] - [% END %][% parent.1 %]</a>[% END %])
                               [% END %]
                             </td>
                           </tr>
