@@ -5,6 +5,7 @@ next:
           - add `tree` sitepanel for very large setups with many sites
           - add parents to selectable columns
           - add option to store selected backends along with a bookmark
+          - add support for dependencies (naemon only)
           - fix offset calculation in rest api
           - fix page not found issue when using browser history back
           - REST:
